--- a/index1.html
+++ b/index1.html
@@ -212,8 +212,8 @@
       
       <!-- Navigation arrows --> 
       <!-- تم إضافة z-20 لضمان ظهورها فوق الطبقة العازلة -->
-      <button class="slide-nav prev absolute left-4 top-1/2 transform -translate-y-1/2 bg-white/20 hover:bg-white/30 text-white p-3 rounded-full transition-all z-20" onclick="changeSlide(-1)"> ❮ </button> 
-      <button class="slide-nav next absolute right-4 top-1/2 transform -translate-y-1/2 bg-white/20 hover:bg-white/30 text-white p-3 rounded-full transition-all z-20" onclick="changeSlide(1)"> ❯ </button> 
+      <button class="slide-nav prev absolute left-4 top-1/2 transform -translate-y-1/2 bg-white/20 hover:bg-white/30 text-white p-3 rounded-full transition-all z-20" onclick="changeSlide(1)"> ❯ </button> 
+      <button class="slide-nav next absolute right-4 top-1/2 transform -translate-y-1/2 bg-white/20 hover:bg-white/30 text-white p-3 rounded-full transition-all z-20" onclick="changeSlide(-1)"> ❮ </button> 
       
       <!-- Dots indicator -->
       <div class="absolute bottom-4 left-1/2 transform -translate-x-1/2 flex gap-2 z-20"> <!-- تم إضافة z-20 -->
