--- a/index3.html
+++ b/index3.html
@@ -256,7 +256,7 @@
         <h2 class="text-4xl md:text-5xl font-extrabold mb-4 text-purple-900">حلول العرض والتفاعل التي نقدّمها وكيف تُحوّل فعاليتك</h2>
         
         <div class="p-4 sm:p-6 bg-white rounded-3xl shadow-2xl overflow-hidden border-4 border-purple-100">
-            <img src="https://i.ibb.co/606Y6mJ9/about.png" 
+            <img src="about.png" 
                  alt="منظومة EventPlus: حلول عرض ذكية وتجارب تفاعلية وقيمة مضافة" 
                  class="w-full h-auto object-contain rounded-2xl" 
                  style="max-width: 100%; height: auto; display: block;"/>
