--- a/games/index.html
+++ b/games/index.html
@@ -169,7 +169,7 @@
                 {q: "ويش العملة اللي نستخدمها في عمان؟", a: ["الريال العماني", "الدينار", "الدرهم"], c: "الريال العماني"},
                 {q: "منهو السلطان الحالي الله يحفظه؟", a: ["هيثم بن طارق", "قابوس بن سعيد", "سعيد بن تيمور"], c: "هيثم بن طارق"},
                 {q: "الخنجر في العلم لونه هيش؟", a: ["أبيض", "أحمر", "أخضر"], c: "أبيض"},
-                {q: "متى نحتفل بالعيد الوطني؟", a: ["18 نوفمبر", "23 يوليو", "11 يناير"], c: "18 نوفمبر"},
+                {q: "الجبل اللي يزرعون فيه رمان وورد? ", a: ["الجبل الأخضر", "شمس", "الكور"], c: "الجبل الأخضر"},
                 {q: "هيش أشهر حلوى نقدمها للضيف؟", a: ["الحلوى العمانية", "البقلاوة", "الكنافة"], c: "الحلوى العمانية"},
                 {q: "وين يصير مهرجان الخريف؟", a: ["صلالة", "صور", "نزوى"], c: "صلالة"},
                 {q: "ويش الرمز الموجود في علمنا؟", a: ["الخنجر والسيفين", "النخلة", "الصقر"], c: "الخنجر والسيفين"},
@@ -450,7 +450,7 @@
                 </div>
                 <div className="w-px h-4 bg-white/10 hidden sm:block"></div>
                 <div className="flex items-center gap-2 bg-white/5 px-3 py-1.5 rounded-full border border-white/5">
-                    <span className="text-pink-400 font-bold uppercase tracking-wider">للطلب تصميم العاب</span>
+                    <span className="text-pink-400 font-bold uppercase tracking-wider">للطلب و الاستفسار</span>
                     <span className="flex items-center gap-1 text-white" dir="ltr">
                         <Icon name="Phone" size={14} /> +968 77220363
                     </span>
