--- a/games/index.html
+++ b/games/index.html
@@ -136,19 +136,19 @@
                 id: 'EASY', label: 'مبتدئ', subLabel: 'بداية الرحلة', icon: 'Sparkles',
                 multiplier: 1, timeFactor: 1.0, speedFactor: 1.0, 
                 color: 'text-emerald-400', bgGradient: 'from-emerald-900/40 to-emerald-900/10', border: 'border-emerald-500/30', glow: 'shadow-emerald-500/20',
-                mathRange: 10, gamePoints: { REFLEX: 20, COLOR: 35, MATH: 80, QUIZ: 500 }, timeBonus: { MATH: 5, COLOR: 2, REFLEX: 0 }
+                mathRange: 10, gamePoints: { REFLEX: 30, COLOR: 50, MATH: 80, QUIZ: 550 }, timeBonus: { MATH: 5, COLOR: 2, REFLEX: 0 }
             },
             MEDIUM: { 
-                id: 'MEDIUM', label: 'محترف', subLabel: 'التحدي الحقيقي', icon: 'Zap',
+                id: 'MEDIUM', label: 'متوسط', subLabel: 'التحدي الحقيقي', icon: 'Zap',
                 multiplier: 1.5, timeFactor: 0.66, speedFactor: 1.5, 
                 color: 'text-amber-400', bgGradient: 'from-amber-900/40 to-amber-900/10', border: 'border-amber-500/30', glow: 'shadow-amber-500/20',
-                mathRange: 50, gamePoints: { REFLEX: 30, COLOR: 50, MATH: 100, QUIZ: 1000 }, timeBonus: { MATH: 3, COLOR: 1.5, REFLEX: 0 }
+                mathRange: 50, gamePoints: { REFLEX: 50, COLOR: 50, MATH: 100, QUIZ: 650 }, timeBonus: { MATH: 3, COLOR: 1.5, REFLEX: 0 }
             },
             HARD: { 
-                id: 'HARD', label: 'أسطوري', subLabel: 'للمحترفين فقط', icon: 'Flame',
+                id: 'HARD', label: 'صعب', subLabel: 'للمحترفين فقط', icon: 'Flame',
                 multiplier: 2, timeFactor: 0.5, speedFactor: 2.0, 
                 color: 'text-rose-500', bgGradient: 'from-rose-900/40 to-rose-900/10', border: 'border-rose-500/30', glow: 'shadow-rose-500/20',
-                mathRange: 99, gamePoints: { REFLEX: 40, COLOR: 65, MATH: 150, QUIZ: 2000 }, timeBonus: { MATH: 2, COLOR: 1, REFLEX: 0 }
+                mathRange: 99, gamePoints: { REFLEX: 60, COLOR: 50, MATH: 120, QUIZ: 750 }, timeBonus: { MATH: 2, COLOR: 1, REFLEX: 0 }
             }
         };
 
@@ -408,10 +408,103 @@
             const [qIdx, setQIdx] = useState(0);
             const [timeLeft, setTimeLeft] = useState(15 * diff.timeFactor);
             const QUESTIONS_DB = {
-                EASY: [{q: "عاصمة السلطنة؟", a:["مسقط","صلالة","صحار"], c:"مسقط"}, {q:"العملة؟", a:["الريال","الدينار","الدرهم"], c:"الريال"}, {q:"لون الخنجر بالعلم؟", a:["أبيض","أحمر","أخضر"], c:"أبيض"}],
-                MEDIUM: [{q: "أين يوجد الجبل الأخضر؟", a:["الداخلية","ظفار","مسقط"], c:"الداخلية"}, {q:"لقب صحار قديماً؟", a:["دهليز الصين","المزون","مجان"], c:"دهليز الصين"}],
-                HARD: [{q: "تاريخ خروج البرتغاليين؟", a:["1650","1507","1741"], c:"1650"}, {q:"مؤسس دولة البوسعيد؟", a:["أحمد بن سعيد","سلطان بن سيف","سيف بن سلطان"], c:"أحمد بن سعيد"}]
-            };
+            EASY: [
+                {q: "هيش هي عاصمة السلطنة؟", a: ["مسقط", "صلالة", "صحار"], c: "مسقط"},
+                {q: "ويش العملة اللي نستخدمها في عمان؟", a: ["الريال العماني", "الدينار", "الدرهم"], c: "الريال العماني"},
+                {q: "منهو السلطان الحالي الله يحفظه؟", a: ["هيثم بن طارق", "قابوس بن سعيد", "سعيد بن تيمور"], c: "هيثم بن طارق"},
+                {q: "الخنجر في العلم لونه هيش؟", a: ["أبيض", "أحمر", "أخضر"], c: "أبيض"},
+                {q: "الجبل اللي يزرعون فيه رمان وورد? ", a: ["الجبل الأخضر", "شمس", "الكور"], c: "الجبل الأخضر"},
+                {q: "هيش أشهر حلوى نقدمها للضيف؟", a: ["الحلوى العمانية", "البقلاوة", "الكنافة"], c: "الحلوى العمانية"},
+                {q: "وين يصير مهرجان الخريف؟", a: ["صلالة", "صور", "نزوى"], c: "صلالة"},
+                {q: "ويش الرمز الموجود في علمنا؟", a: ["الخنجر والسيفين", "النخلة", "الصقر"], c: "الخنجر والسيفين"},
+                {q: "الرجال عندنا هيش يلبسون؟", a: ["دشداشة", "ثوب", "جلابية"], c: "دشداشة"},
+                {q: "اللي ينحط على الراس في الرسميات هيش يسمونه؟", a: ["مصر", "غترة", "شماغ"], c: "مصر"},
+                {q: "والقبعة المطرزة هيش اسمها؟", a: ["كمة", "طاقية", "عمة"], c: "كمة"},
+                {q: "الحيوان اللي يعتبر رمز للمحميات عندنا؟", a: ["المها العربي", "النمر", "الفيل"], c: "المها العربي"},
+                {q: "شجرة اللبان وين تكثر؟", a: ["ظفار", "مسقط", "الباطنة"], c: "ظفار"},
+                {q: "أكبر مطار في عمان هيش اسمه؟", a: ["مطار مسقط", "مطار دبي", "مطار الدوحة"], c: "مطار مسقط"},
+                {q: "بحرنا من صوب الشرق هيش اسمه؟", a: ["بحر العرب", "البحر الأحمر", "المتوسط"], c: "بحر العرب"},
+                {q: "من جيرانا من صوب الغرب؟", a: ["الإمارات والسعودية", "الكويت", "العراق"], c: "الإمارات والسعودية"},
+                {q: "ديانتنا الرسمية هيش؟", a: ["الاسلام", "المسيحية", "الهندوسية"], c: "الاسلام"},
+                {q: "بأي لغة نتكلم في الدوائر الحكومية؟", a: ["العربية", "الإنجليزية", "الأردية"], c: "العربية"},
+                {q: "أكبر محافظة ف المساحة هيش هي؟", a: ["الوسطى", "مسقط", "مسندم"], c: "الوسطى"},
+                {q: "يوم النهضة 23 يوليو كان ف عهد منهو؟", a: ["السلطان قابوس", "السلطان هيثم", "السلطان سعيد"], c: "السلطان قابوس"},
+                {q: "الأكلة اللي ندفنها في الأرض أيام العيد هيش؟", a: ["الشواء", "المكبوس", "الهريس"], c: "الشواء"},
+                {q: "طيران بلادنا هيش اسمه؟", a: ["الطيران العماني", "طيران الخليج", "الإماراتية"], c: "الطيران العماني"},
+                {q: "كم لون في علم عمان غير الشعار؟", a: ["ثلاثة", "أربعة", "اثنين"], c: "ثلاثة"},
+                {q: "القهوة عندنا رمز لويش؟", a: ["الضيافة والكرم", "التجارة", "الزراعة"], c: "الضيافة والكرم"},
+                {q: "ميناء مسقط القديم هيش اسمه؟", a: ["ميناء مطرح", "صحار", "صلالة"], c: "ميناء مطرح"},
+                {q: "السوق الشعبي المعروف ف مسقط؟", a: ["سوق مطرح", "سوق المباركية", "واقف"], c: "سوق مطرح"},
+                {q: "سفننا القديمة هيش يسمونها؟", a: ["الداو", "اليخوت", "العبارات"], c: "الداو"},
+                {q: "يوم نسلم على حد هيش نقول؟", a: ["السلام عليكم", "مرحباً", "صباح الخير"], c: "السلام عليكم"},
+                {q: "الفاكهة اللي نزرعها وايد وتجي من النخل؟", a: ["الرطب/التمر", "فراولة", "أناناس"], c: "الرطب/التمر"},
+                {q: "السمكة الصغيرة اللي نجففها وتكثر عندنا؟", a: ["العومة", "سلمون", "قرش"], c: "العومة"}
+            ],
+            MEDIUM: [
+                {q: "الري مال الأولين هيش يسمونه؟", a: ["الأفلاج", "الآبار", "السدود"], c: "الأفلاج"},
+                {q: "أعلى جبل في عمان وين؟", a: ["جبل شمس", "الجبل الأخضر", "سمحان"], c: "جبل شمس"},
+                {q: "وين تقع القلعة الكبيرة المدورة (الشهباء)؟", a: ["نزوى", "صحار", "صور"], c: "نزوى"},
+                {q: "القلعة اللي سورها طويل ومسجلة ف اليونسكو؟", a: ["قلعة بهلاء", "نخل", "الحزم"], c: "قلعة بهلاء"},
+                {q: "المضيق اللي نطل عليه ويتحكم ف التجارة؟", a: ["مضيق هرمز", "باب المندب", "جبل طارق"], c: "مضيق هرمز"},
+                {q: "الولاية اللي يصنعون فيها سفن الخشب؟", a: ["صور", "قريات", "بركاء"], c: "صور"},
+                {q: "الوادي اللي مايه أخضر طول السنة ف الشرقية؟", a: ["وادي بني خالد", "وادي غول", "الجزي"], c: "وادي بني خالد"},
+                {q: "الجبل اللي يزرعون فيه رمان وورد? ", a: ["الجبل الأخضر", "شمس", "الكور"], c: "الجبل الأخضر"},
+                {q: "جزيرة السلاحف هيش اسمها؟", a: ["مصيرة", "الحلانيات", "الفحل"], c: "مصيرة"},
+                {q: "دار الأوبرا وين مكانها بالضبط؟", a: ["القرم", "مطرح", "الخوير"], c: "القرم"},
+                {q: "سد وادي ضيقة وين مكانه؟", a: ["قريات", "العامرات", "بدبد"], c: "قريات"},
+                {q: "أكبر كهف ف عمان (مجلس الجن) وين؟", a: ["هضبة سلماه/قريات", "نزوى", "عبري"], c: "هضبة سلماه/قريات"},
+                {q: "السفينة اللي راحت لين الصين هيش اسمها؟", a: ["سفينة صحار", "جوهرة مسقط", "مجان"], c: "سفينة صحار"},
+                {q: "المحافظة المفصوله عنا فوق صوب الشمال؟", a: ["مسندم", "البريمي", "الظاهرة"], c: "مسندم"},
+                {q: "الفن اللي يلعبون فيه بالسيف والعصا؟", a: ["الرزحة", "الميدان", "التغرود"], c: "الرزحة"},
+                {q: "عين حارة ف الرستاق هيش اسمها؟", a: ["عين الكسفة", "الثوارة", "أرزات"], c: "عين الكسفة"},
+                {q: "وعين حارة ف نخل؟", a: ["الثوارة", "الكسفة", "حمران"], c: "الثوارة"},
+                {q: "مدينتنا اللي كانوا يسمونها دهليز الصين؟", a: ["صحار", "مسقط", "قلهات"], c: "صحار"},
+                {q: "المنطقة الاقتصادية الجديدة فالوسطى؟", a: ["الدقم", "هيماء", "محوت"], c: "الدقم"},
+                {q: "القلاع اللي تحرس مسقط القديمة؟", a: ["الجلالي والميراني", "نزوى وبهلاء", "الحزم والرستاق"], c: "الجلالي والميراني"},
+                {q: "متحف مشهور ف مسقط القديمة؟", a: ["بيت الزبير", "الوطني", "الطفل"], c: "بيت الزبير"},
+                {q: "اسم ظفار الأولي هيش كان؟", a: ["الأحقاف", "مجان", "مزون"], c: "الأحقاف"},
+                {q: "خبزنا العماني الخفيف هيش نسميه؟", a: ["خبز رخال", "تنور", "شباتي"], c: "خبز رخال"},
+                {q: "سوق الغنم قبل العيد هيش نسميه؟", a: ["الهبطة", "الحراج", "المزاد"], c: "الهبطة"},
+                {q: "أول سفينة راحت أمريكا؟", a: ["سلطانة", "صحار", "الرحماني"], c: "سلطانة"},
+                {q: "جزر فيها شعاب مرجانية ف مسقط؟", a: ["الديمانيات", "الحلانيات", "مصيرة"], c: "الديمانيات"},
+                {q: "الوادي اللي لازم تركب قارب عشان تدخله ف طيوي؟", a: ["وادي شاب", "بني خروص", "الأبيض"], c: "وادي شاب"},
+                {q: "الصندوق الخشبي مال الملابس هيش نسميه؟", a: ["المندوس", "الصندوق", "السحارة"], c: "المندوس"},
+                {q: "وين يقع حصن الحزم؟", a: ["الرستاق", "المصنعة", "بركاء"], c: "الرستاق"},
+                {q: "وين يصلحون السفن الكبار (الحوض الجاف)؟", a: ["الدقم", "صحار", "صلالة"], c: "الدقم"}
+            ],
+            HARD: [
+                {q: "أي سنة طردنا البرتغاليين نهائياً؟", a: ["1650", "1507", "1741"], c: "1650"},
+                {q: "منهو مؤسس دولة البوسعيد؟", a: ["أحمد بن سعيد", "سلطان بن سيف", "سيف بن سلطان"], c: "أحمد بن سعيد"},
+                {q: "اسم عمان القديم (جبل النحاس) هيش هو؟", a: ["مجان", "مزون", "الغبيراء"], c: "مجان"},
+                {q: "ومعنى اسم (مزون) هيش؟", a: ["المياه الواجدة", "النحاس", "الجبل"], c: "المياه الواجدة"},
+                {q: "الملاح العماني الملقب بأسد البحار منهو؟", a: ["أحمد بن ماجد", "ناصر بن مرشد", "كعب بن زهير"], c: "أحمد بن ماجد"},
+                {q: "منهو الإمام اللي بنى قلعة نزوى؟", a: ["سلطان بن سيف", "ناصر بن مرشد", "بلعرب"], c: "سلطان بن سيف"},
+                {q: "وحصن جبرين الزين منهو بانيه؟", a: ["بلعرب بن سلطان", "سلطان بن سيف", "سيف بن سلطان"], c: "بلعرب بن سلطان"},
+                {q: "العالم اللي سوى علم العروض ومعجم العين؟", a: ["الخليل بن أحمد", "ابن دريد", "المبرد"], c: "الخليل بن أحمد"},
+                {q: "المدينة المفقودة ف الربع الخالي هيش اسمها؟", a: ["أوبار", "سمهرم", "البليد"], c: "أوبار"},
+                {q: "ميناء اللبان القديم ف ظفار؟", a: ["البليد", "مرباط", "سدح"], c: "البليد"},
+                {q: "المدينة التاريخية اللي دمرها الزلزال ف صور؟", a: ["قلهات", "طيوي", "رأس الحد"], c: "قلهات"},
+                {q: "قبر (بيبي مريم) وين محله؟", a: ["قلهات", "نزوى", "صحار"], c: "قلهات"},
+                {q: "أعمق فلج ف عمان ومسجل ف اليونسكو؟", a: ["فلج الملكي", "الجيلة", "دارس"], c: "فلج الملكي"},
+                {q: "أطول فلج عندنا هيش اسمه؟", a: ["فلج دارس", "الميسر", "الخطمين"], c: "فلج دارس"},
+                {q: "متى دخلت عمان الأمم المتحدة؟", a: ["1971", "1970", "1975"], c: "1971"},
+                {q: "الفن اللي فيه شعر وفخر وبدون طبول؟", a: ["العازي", "الهمبل", "الرزحة"], c: "العازي"},
+                {q: "مدافن شكلها مثل خلية النحل ف عبري وين؟", a: ["بات والخطم", "زكيت", "سمد"], c: "بات والخطم"},
+                {q: "السفينة العودة (الكبيرة) مالت المحيطات هيش يسمونها؟", a: ["الغانجة", "الهوري", "الشاشه"], c: "الغانجة"},
+                {q: "يوم المرأة العمانية أي تاريخ؟", a: ["17 أكتوبر", "18 نوفمبر", "8 مارس"], c: "17 أكتوبر"},
+                {q: "متى وقعوا اتفاقية السيب؟", a: ["1920", "1955", "1913"], c: "1920"},
+                {q: "أول جريدة عمانية ف زنجبار هيش كان اسمها؟", a: ["الفلق", "النجاح", "النهضة"], c: "النجاح"},
+                {q: "حصن السليف وين يقع؟", a: ["عبري", "مقشن", "أدم"], c: "عبري"},
+                {q: "الإمام اللي وحد البلاد وبدأ دولة اليعاربة؟", a: ["ناصر بن مرشد", "سلطان بن سيف", "مرشد"], c: "ناصر بن مرشد"},
+                {q: "موسم خراف الرطب هيش نسميه؟", a: ["القيظ", "الصرام", "الجداد"], c: "القيظ"},
+                {q: "القائد اللي حرر ممباسا وسموه (قيد الأرض)؟", a: ["سيف بن سلطان", "أحمد بن سعيد", "ثويني"], c: "سيف بن سلطان"},
+                {q: "البريمي ويش كان اسمها قبل؟", a: ["توام", "الجوف", "السر"], c: "توام"},
+                {q: "فن الحريم المعروف ف ظفار؟", a: ["الطبل", "الرزحة", "العازي"], c: "الطبل"},
+                {q: "المعاهدة مع بريطانيا عام 1839 هيش اسمها؟", a: ["الصداقة والتجارة", "الحماية", "مسقط"], c: "الصداقة والتجارة"},
+                {q: "حصن الأسود وين مكانه؟", a: ["عبري", "مقشن", "أدم"], c: "عبري"},
+                {q: "عاصمة عمان ف زمن السيد سعيد بن سلطان كانت مسقط و...؟", a: ["زنجبار", "مكران", "جوادور"], c: "زنجبار"}
+            ]
+        };
             useEffect(() => {
                 const pool = QUESTIONS_DB[diff.id] || QUESTIONS_DB.EASY;
                 setQuestions(pool.sort(() => Math.random() - 0.5).slice(0, 5));
