--- a/games/index.html
+++ b/games/index.html
@@ -15,8 +15,7 @@
 
     <style>
 	{
-    /* يمنع التكبير بالنقر المزدوج ويسرع استجابة اللمس */
-    touch-action: manipulation; 
+    touch-action: manipulation;
 }
         @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;900&display=swap');
 
@@ -990,46 +989,41 @@
 
         const root = ReactDOM.createRoot(document.getElementById('root'));
         root.render(<App />);
+		
+		
 		let tapCount = 0;       // عداد النقرات
-  let tapTimer = null;    // مؤقت لإعادة ضبط العداد
+  let tapTimer = null;    // مؤقت التصفير
 
-  // استمع للنقرات على كامل الصفحة (document)
   document.addEventListener('click', function() {
-    tapCount++; // زيادة العداد مع كل نقرة
+    tapCount++; // زيادة العداد
 
-    // إذا توقف المستخدم عن النقر لمدة نصف ثانية، نعيد العداد للصفر
+    // إعادة ضبط العداد إذا توقف النقر لأكثر من 400 جزء من الثانية
     if (tapTimer) clearTimeout(tapTimer);
     tapTimer = setTimeout(() => {
       tapCount = 0;
-    }, 500); // 500 ميلي ثانية (نصف ثانية) مهلة بين النقرات
+    }, 400); 
 
-    // إذا وصل العدد إلى 5 نقرات
+    // الشرط: 5 ضغطات فقط
     if (tapCount === 5) {
-      toggleFullScreen(); // نفذ دالة التبديل
-      tapCount = 0;       // صفر العداد فوراً
+      // نتحقق أولاً: هل نحن خارج وضع ملء الشاشة؟ إذا نعم، ندخل الوضع.
+      if (!document.fullscreenElement && !document.webkitFullscreenElement) {
+        enterFullScreen();
+      }
+      
+      // ملاحظة: لا يوجد كود هنا للخروج (Exit)، تم حذفه بناءً على طلبك
+      tapCount = 0; // تصفير العداد
     }
   });
 
-  // دالة التعامل مع وضع ملء الشاشة
-  function toggleFullScreen() {
-    if (!document.fullscreenElement) {
-      // الدخول في وضع ملء الشاشة
-      if (document.documentElement.requestFullscreen) {
-        document.documentElement.requestFullscreen();
-      } else if (document.documentElement.webkitRequestFullscreen) { /* Safari/Android القديم */
-        document.documentElement.webkitRequestFullscreen();
-      } else if (document.documentElement.msRequestFullscreen) { /* IE11 */
-        document.documentElement.msRequestFullscreen();
-      }
-    } else {
-      // الخروج من وضع ملء الشاشة
-      if (document.exitFullscreen) {
-        document.exitFullscreen();
-      } else if (document.webkitExitFullscreen) { /* Safari/Android القديم */
-        document.webkitExitFullscreen();
-      } else if (document.msExitFullscreen) { /* IE11 */
-        document.msExitFullscreen();
-      }
+  // دالة الدخول (فقط)
+  function enterFullScreen() {
+    let elem = document.documentElement;
+    if (elem.requestFullscreen) {
+      elem.requestFullscreen();
+    } else if (elem.webkitRequestFullscreen) { /* مهم للأندرويد و كروم */
+      elem.webkitRequestFullscreen();
+    } else if (elem.msRequestFullscreen) {
+      elem.msRequestFullscreen();
     }
   }
     </script>
