--- a/games/index.html
+++ b/games/index.html
@@ -490,7 +490,7 @@
         };
 
         const SettingsModal = ({ isOpen, onClose, sfx, music, onUpdate }) => {
-            const [step, setStep] = useState('MAIN'); // MAIN, CONFIRM_DELETE
+            const [step, setStep] = useState('MAIN'); // MAIN, CONFIRM_DELETE, SUCCESS
             const [deleteInput, setDeleteInput] = useState('');
 
             useEffect(() => {
@@ -506,8 +506,8 @@
                 if (deleteInput === "حذف") {
                     localStorage.removeItem('festival_scores');
                     SoundManager.delete();
-                    setStep('MAIN');
-                    alert("تم حذف السجل بنجاح");
+                    setStep('SUCCESS');
+                    setDeleteInput('');
                 }
             };
 
@@ -518,12 +518,12 @@
                         {/* Header */}
                         <div className="flex justify-between items-center mb-6">
                             <h2 className="text-2xl font-bold text-white">
-                                {step === 'MAIN' ? 'الإعدادات' : 'تأكيد الحذف'}
+                                {step === 'MAIN' ? 'الإعدادات' : (step === 'SUCCESS' ? 'تمت العملية' : 'تأكيد الحذف')}
                             </h2>
                             <button onClick={onClose} className="p-2 bg-white/5 rounded-full hover:bg-white/10"><Icon name="X" size={24}/></button>
                         </div>
 
-                        {step === 'MAIN' ? (
+                        {step === 'MAIN' && (
                             <>
                                 <Toggle label="الموسيقى" checked={music} onChange={(val) => onUpdate('music', val)} />
                                 <Toggle label="المؤثرات الصوتية" checked={sfx} onChange={(val) => onUpdate('sfx', val)} />
@@ -539,7 +539,9 @@
                                      <Button onClick={onClose} variant="ghost">إغلاق</Button>
                                 </div>
                             </>
-                        ) : (
+                        )}
+                        
+                        {step === 'CONFIRM_DELETE' && (
                             <div className="flex flex-col gap-4 animate-slideUp">
                                 <div className="p-4 bg-red-500/10 border border-red-500/20 rounded-xl text-red-200 text-sm">
                                     <div className="flex items-center gap-2 mb-2 font-bold text-red-400">
@@ -571,6 +573,21 @@
                                         تأكيد الحذف
                                     </Button>
                                 </div>
+                            </div>
+                        )}
+
+                        {step === 'SUCCESS' && (
+                            <div className="flex flex-col gap-6 items-center animate-slideUp py-4">
+                                <div className="w-20 h-20 bg-green-500/20 rounded-full flex items-center justify-center border-2 border-green-500/50">
+                                    <Icon name="Check" size={48} className="text-green-500" />
+                                </div>
+                                <div className="text-center">
+                                    <h3 className="text-xl font-bold text-white mb-2">تم الحذف بنجاح</h3>
+                                    <p className="text-gray-400 text-sm">تم مسح جميع سجلات المشاركين من قاعدة البيانات المحلية.</p>
+                                </div>
+                                <Button onClick={() => setStep('MAIN')} variant="success" className="w-full">
+                                    عودة للإعدادات
+                                </Button>
                             </div>
                         )}
                     </div>
