--- a/games/test.html
+++ b/games/test.html
@@ -130,7 +130,7 @@
                     </div>
                     <span class="text-[12px] font-black text-royalBlue uppercase tracking-widest">Powered by moment+</span>
                 </div>
-                <h3 class="text-2xl font-black text-gray-800">تم توليد الشهادة!</h3>
+                <h3 class="text-2xl font-black text-gray-800">يسعدنا تقديم شهادتك إليك.</h3>
             </div>
         </div>
 
